# try_thrust_man_vec

./: CMakeLists.txt  README.md
include/: VariadicToOutputStream.h  cuda_utils.h  managed_allocator.h  utils.h
src/: try_thrust_man_vec.cu  utils.cpp
